--- a/nvme_esxi_8.adoc
+++ b/nvme_esxi_8.adoc
@@ -15,7 +15,7 @@ summary: Describes how to configure NVMe-oF for ESXi 8.x with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-This document contains the details for enabling NVMe-oF on ESXi 8.x initiator hosts and ONTAP as the target.
+You can configure NVMe over Fabrics (NVMe-oF) on initiator hosts running ESXi 8.x and ONTAP as the target.
 
 == Supportability
 
@@ -32,10 +32,7 @@ This document contains the details for enabling NVMe-oF on ESXi 8.x initiator ho
 
 ==	Known limitations
 
-The following configurations are not supported:
-
-* RDM mapping
-
+* RDM mapping is not supported.
 
 == Enable NVMe/FC
 
@@ -69,7 +66,7 @@ If the host NQN strings do not match, you should use the `vserver nvme subsystem
 
 The `lpfc` driver and the `qlnativefc` driver in vSphere 8.x have the NVMe/FC capability enabled by default.
 
-Check whether the configuration is supported with required driver or firmware by referring to link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
+Check whether the configuration is supported with the driver or firmware by referring to link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
 ==	Validate NVMe/FC
 
@@ -156,7 +153,7 @@ fc.20000024ff7f4a50:21000024ff7f4a50-fc.2004d039ea3ab21f:2007d039ea3ab21f-uuid.d
 
 == Configure NVMe/TCP
 
-In ESXi 8.0, the required NVMe/TCP modules are loaded by default. To configure the network and the NVMe/TCP adapter, refer to the VMware vSphere documentation.
+In ESXi 8.x, the required NVMe/TCP modules are loaded by default. To configure the network and the NVMe/TCP adapter, refer to the VMware vSphere documentation.
 
 == Validate NVMe/TCP
 
@@ -241,14 +238,16 @@ tcp.vmnic2:34:80:0d:30:ca:e0-tcp.192.168.100.167:4420-uuid.f4f14337c3ad4a639edf0
    Path Config: {ANA_GRP_id=6,*ANA_GRP_state=AO*,health=UP}
 ----
 
-== Known issue
+== Known issues
 
 [cols="10,30,30",options="header"]
 |===
-|NetApp Bug ID	|Title	|Workaround	
-|link:https://mysupport.netapp.com/site/bugs-online/product/ONTAP/BURT/1420654[1420654^]	|ONTAP node non-operational when NVMe/FC protocol is used with ONTAP version 9.9.1 |Check and rectify any network issues in the host fabric. If this does not help, upgrade to a patch that fixes this issue.
-| 1543660 | |
-|
+h|NetApp Bug ID	h|Title	h|Description
+|link:https://mysupport.netapp.com/site/bugs-online/product/ONTAP/BURT/1420654[1420654^]	|ONTAP node non-operational when NVMe/FC protocol is used with ONTAP version 9.9.1 |ONTAP 9.9.1 has introduced support for the NVMe "abort" command. When ONTAP 
+receives the "abort" command to abort an NVMe fused command that is waiting for 
+its partner command, an ONTAP node disruption occurs. The issue is noticed only with hosts 
+that use NVMe fused commands (for example, ESX) and Fibre Channel (FC) transport. 
+|1543660 | I/O error occurs when LinuxVMs using vNVMe adapters encounter a long all paths down window a|Linux VMs running vSphere 8.x and later and using a virtual NVMe (vNVME) adapter encounters an I/O error because the vNVMe retry operation is disabled by default. To avoid the hang/lockup problem on Linux VMs running older kernels during an all paths down or a heavy I/O load, VMware has introduced a tunable "VSCSIDisableNvmeRetry" to disable the vNVMe retry operation.
 |===
 
 .Related Links
