--- a/nvme_esxi_8.adoc
+++ b/nvme_esxi_8.adoc
@@ -247,7 +247,7 @@ h|NetApp Bug ID	h|Title	h|Description
 receives the "abort" command to abort an NVMe fused command that is waiting for 
 its partner command, an ONTAP node disruption occurs. The issue is noticed only with hosts 
 that use NVMe fused commands (for example, ESX) and Fibre Channel (FC) transport. 
-|1543660 | I/O error occurs when Linux VMs using vNVMe adapters encounter a long all paths down (APD) window a|Linux VMs running vSphere 8.x and later and using a virtual NVMe (vNVME) adapter encounters an I/O error because the vNVMe retry operation is disabled by default. To avoid the hang/lockup problem on Linux VMs running older kernels during an all paths down (APD) or a heavy I/O load, VMware has introduced a tunable "VSCSIDisableNvmeRetry" to disable the vNVMe retry operation.
+|1543660 | I/O error occurs when Linux VMs using vNVMe adapters encounter a long all paths down (APD) window a|Linux VMs running vSphere 8.x and later and using virtual NVMe (vNVME) adapters encounter an I/O error because the vNVMe retry operation is disabled by default. To avoid a disruption on Linux VMs running older kernels during an all paths down (APD) or a heavy I/O load, VMware has introduced a tunable "VSCSIDisableNvmeRetry" to disable the vNVMe retry operation.
 |===
 
 .Related Links
