updating the summary section

--- a/nvme_esxi_8.adoc
+++ b/nvme_esxi_8.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: nvme_esxi_8.html
 keywords: nvme, esxi, ontap, nvme/fc, hypervisor
-summary: Describes how to configure NVMe-oF for ESXi 8.x with ONTAP
+summary: You can configure NVMe over Fabrics (NVMe-oF) on initiator hosts running ESXi 8.x and ONTAP as the target.
 ---
 
 = NVMe-oF Host Configuration for ESXi 8.x with ONTAP
