--- a/hu_vsphere_8.adoc
+++ b/hu_vsphere_8.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
 permalink: hu_vsphere_8.html
-keywords: host utilities, veritas, infoscale, 8.x, netapp, ontap
-summary: Describes how to use Veritas Infoscale 8.8 for Linux with ONTAP
+keywords: host utilities, veritas, infoscale, 8.x, netapp, ontap, vmware, vspehere
+summary: You can configure ONTAP SAN host settings for the VMware vSphere 8.x release with FC, FCoE, and iSCSI protocols.
 ---
 
 = Using VMware vSphere 8.x with NetApp ONTAP
