--- a/nvme_rhel_92.adoc
+++ b/nvme_rhel_92.adoc
@@ -424,6 +424,8 @@ There are no known issues.
 
 == Troubleshooting
 
+Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant to the IMT specifications and then proceed with the next steps to debug any host side issues.
+
 === Enable verbose logging
 
 If you have an issue with your configuration, verbose logging can provide essential information for troubleshooting.
